<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Unit Converter</string>
    <string name="action_settings">Settings</string>

    <!-- Converter Text -->
    <string name="converter_temperature">Temperature</string>
    <string name="converter_weight">Weight</string>
    <string name="converter_distance">Distance</string>
    <string name="converter_volume">Volume</string>
    <string name="converter_area">Area</string>
    <string name="converter_time">Time</string>

    <!-- Background Colors -->
    <color name="greenBackground">#27ae60</color>
    <color name="darkGreenBackground">#4aae74</color>
    <color name="blueBackground">#3498DB</color>
    <color name="darkBlueBackground">#287bb2</color>
    <color name="purpleBackground">#9b59b6</color>
    <color name="darkPurpleBackground">#7c4792</color>
    <color name="redBackground">#e74c3c</color>
    <color name="darkRedBackground">#b83e32</color>
    <color name="pumpkinBackground">#d35400</color>
    <color name="darkPumpkinBackground">#b64900</color>
    <color name="greenSeaBackground">#16a085</color>
    <color name="darkGreenSeaBackground">#118770</color>
    <color name="btnColor">#55FFFFFF</color>
    <color name="btnClickColor">#55E6E6E6</color>

    <!-- Activity Titles -->
    <string name="title_activity_temperature_converter">Temperature Converter</string>
    <string name="title_activity_weight_converter">Weight Converter</string>
    <string name="title_activity_distance_converter">Distance Converter</string>
    <string name="title_activity_volume_converter">Volume Converter</string>
    <string name="title_activity_area_converter">Area Converter</string>
    <string name="title_activity_time_converter">Time Converter</string>

    <!-- Time Converter Units List -->
    <string name="convert">Convert</string>
    <string name="from_prompt">Convert from...</string>
    <string name="to_prompt">Convert to...</string>

    <!-- time unit list -->
    <string-array name="time_units">
        <item>Convert from...</item>
        <item>Hours</item>
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
    <!-- distance unit list -->
    <string-array name="distance_units">
        <item>Convert from...</item>
        <item>Inches</item>
        <item>Centimeters</item>
        <item>Millimeters</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Meters</item>
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>
    <!-- temperature unit list -->
    <string-array name="temperature_units">
        <item>Convert from...</item>
        <item>Fahrenheit</item>
        <item>Celsius</item>
        <item>Kelvin</item>
        <item>Rankine</item>
        <item>Reaumur</item>
    </string-array>
    <!-- volume unit list -->
    <string-array name="volume_units">
        <item>Convert from...</item>
        <item>Cubic Meter</item>
        <item>Cubic Inch</item>
        <item>Cubic Yard</item>
        <item>Liter</item>
        <item>Gallon</item>
        <item>US Fluid Ounce</item>
        <item>Cubic Foot</item>
        <item>US Pint</item>
    </string-array>
    <!-- area unit list -->
    <string-array name="area_units">
        <item>Convert from...</item>
        <item>Acre</item>
        <item>Are</item>
        <item>Barn</item>
        <item>Hectare</item>
        <item>Rood</item>
        <item>Square Foot</item>
        <item>Square Inch</item>
        <item>Square Meter</item>
        <item>Square Mile</item>
        <item>Square Rod</item>
        <item>Square Yard</item>
    </string-array>
    <!-- weight unit list -->
    <string-array name="weight_units">
        <item>Convert from...</item>
        <item>Kilogram</item>
        <item>Carat</item>
        <item>Grain</item>
        <item>Newton</item>
        <item>Ounce</item>
        <item>Penny Weight</item>
        <item>Pound</item>
        <item>Quarter</item>
        <item>Ton</item>
    </string-array>

    <!-- Ids -->
    <item name="toSpinner" type="id"/>

    <string name="hello_world">Hello world!</string>
</resources>
