<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:rowCount="3"
    android:columnCount="2"
    android:layout_centerHorizontal="true"
    android:alignmentMode="alignBounds"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal">
            <ImageButton
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:layout_margin="2dp"
                android:layout_weight="0.50"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:id="@+id/temperatureBtn"
                android:background="@drawable/temperature_btn"
                android:src="@drawable/ic_temperature"
                android:soundEffectsEnabled="true"
                android:clickable="true"
                android:elevation="3dp"
                android:onClick="onClick"
                android:contentDescription="@string/converter_temperature" />

            <ImageButton
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_weight="0.50"
                android:id="@+id/imageButton2"
                android:src="@drawable/ic_area"
                android:background="@drawable/area_btn"
                android:clickable="true"
                android:elevation="3dp"
                android:onClick="onClick"
                android:contentDescription="@string/converter_area"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal">
            <ImageButton
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:padding="20dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_weight="0.50"
                android:id="@+id/imageButton3"
                android:src="@drawable/ic_length"
                android:background="@drawable/length_btn"
                android:clickable="true"
                android:elevation="3dp"
                android:onClick="onClick"
                android:contentDescription="@string/converter_length"/>

            <ImageButton
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:padding="20dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_weight="0.50"
                android:id="@+id/imageButton4"
                android:src="@drawable/ic_time"
                android:background="@drawable/time_btn"
                android:clickable="true"
                android:elevation="3dp"
                android:onClick="onClick"
                android:contentDescription="@string/converter_time"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal">
            <ImageButton
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="2dp"
                android:padding="20dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_weight="0.50"
                android:id="@+id/imageButton5"
                android:src="@drawable/ic_volume"
                android:background="@drawable/volume_btn"
                android:clickable="true"
                android:elevation="3dp"
                android:onClick="onClick"
                android:contentDescription="@string/converter_volume"/>

            <ImageButton
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:padding="20dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_weight="0.50"
                android:id="@+id/imageButton6"
                android:src="@drawable/ic_weight"
                android:background="@drawable/weight_btn"
                android:clickable="true"
                android:elevation="3dp"
                android:contentDescription="@string/converter_weight"
                android:onClick="onClick"/>
        </LinearLayout>
    </LinearLayout>
</GridLayout>
