<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/greenBackground"
    android:id="@+id/parentLayout"
    tools:context=".BasicUnitConverterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:id="@+id/temperature"
        android:background="@color/btnColor"
        android:gravity="center_vertical|center_horizontal"
        android:clickable="true"
        android:baselineAligned="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/converter_temperature"
            android:id="@+id/textView"
            android:textColor="#FFFFFF"
            android:clickable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:id="@+id/weight"
        android:background="@color/btnColor"
        android:layout_below="@+id/temperature"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical|center_horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/converter_weight"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:clickable="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:id="@+id/distance"
        android:background="@color/btnColor"
        android:layout_below="@+id/weight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:gravity="center_vertical|center_horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/converter_distance"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:clickable="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:id="@+id/volume"
        android:background="@color/btnColor"
        android:layout_below="@+id/distance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:gravity="center_vertical|center_horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/converter_volume"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:clickable="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:id="@+id/speed"
        android:background="@color/btnColor"
        android:layout_below="@+id/volume"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:gravity="center_vertical|center_horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/converter_currency"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:clickable="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:id="@+id/time"
        android:background="@color/btnColor"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/speed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center_horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/converter_time"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:clickable="false"/>
    </LinearLayout>

</RelativeLayout>
